--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "qvpkg/qvpkg",
     "type": "codeigniter-module",
-    "description": "Test package",
+    "description": "Qualivera Package",
     "authors": [
         {
             "name": "Duncan Sutter",
@@ -12,8 +12,8 @@
         "php": ">=5.3.0"
     },
     "autoload": {
-        "psr-0": {
-            "HelloWorld": ""
+        "psr-4": {
+            "model\\": "models/"
         }
     }
 }
